# fuzzel-x

./: .build.yml  .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .woodpecker.yaml  .woodpecker.yml  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  application.c  application.h  char32.c  char32.h  clipboard.c  clipboard.h  column.c  column.h  config.c  config.h  dmenu.c  dmenu.h  event.c  event.h  fdm.c  font.c  font.h  fuzzel.ini  generate-version.sh  icon.c  icon.h  kbd-repeater.c  kbd-repeater.h  key-binding.c  key-binding.h  log.c  log.h  macros.h  (+31 more)
.builds/: alpine-x64.yml  freebsd-x64.yml
.forgejo/issue_template/: bug.yml  config.yml  feature_request.yml
completions/: meson.build
completions/fish/: fuzzel.fish
completions/zsh/: _f00sel  _fuzzel
doc/: CMakeLists.txt  f00sel.scd  f00sel.scdoc  fuzzel.1.scd  fuzzel.ini.5.scd  fuzzel.scd  meson.build
plugins/: meson.build
plugins/l10n-pinyin/: .clang-format  CMakeLists.txt  README.org  meson.build
plugins/l10n-pinyin/cpp-pinyin/src/: ChineseG2p.cpp
plugins/l10n-pinyin/cpp-pinyin/src/toneUtil/: ManToneUtil.cpp
plugins/l10n-pinyin/src/: plugin-pinyin.cpp
plugins/l10n-pinyin/test/: main.c
test/: accept-nth.fish  auto-select.fish  execute.fish  match-mode-fzf.fish  match-nth.fish
